force-app/main/default/objects/Retail_Packaging_List__c/Retail_Packaging_List__c.object-meta.xml
<CustomObject>
    <label>Retail Packaging List</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Retail Packaging List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Packaging Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>