force-app/main/default/objects/Retail_Packaging_List__c/fields/Add_Customer__c.field-meta.xml
<CustomField>
    <fullName>Add_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Customer</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Packaging Lists</relationshipLabel>
    <relationshipName>Retail_Packaging_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>