force-app/main/default/objects/Retail_Packaging_List__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Dispatch Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>