force-app/main/default/objects/Retail_Packaging_List__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <type>TextArea</type>
</CustomField>