force-app/main/default/objects/Retail_Packaging_List__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Packaging Lists</relationshipLabel>
    <relationshipName>Retail_Packaging_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>