force-app/main/default/objects/Retail_Packaging_List__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Packaging Lists</relationshipLabel>
    <relationshipName>Retail_Packaging_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>