force-app/main/default/objects/Retail_Packaging_List__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <type>TextArea</type>
</CustomField>